# jsc-android-buildscripts

./: .gitignore  .npmignore  COMPILING.md  Dockerfile  LICENSE  README.md  TESTING.md  all.sh  circle.yml  common.sh  fetch_sources.sh  icu-prep.sh  icu.sh  jitpack.yml  jsc-prep.sh  jsc.sh  package.json  start.sh  toolchain.sh  version-prep.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
extra_headers/: math.h  posix_memalign.h
lib/: .gitignore  build.gradle  gradle.properties  settings.gradle
lib/jsc-android/: CMakeLists.txt  build.gradle
measure/: .gitignore  README.md  app.js  index.android.js  measure.sh  package-lock.json  package.json  results.json
patches/: icu-collation.patch  icu.patch  jsc.patch  jsc_android_collator_static.patch  jsc_android_define_bun_macros.patch  jsc_android_jit_guards.patch  jsc_android_jsc_wait.patch  jsc_android_log_version.patch  jsc_android_silence_unused.patch  jsc_android_timezone_validate.patch  jsc_android_uv_pri64.patch  jsc_android_wtf_sources.patch  jsc_async_frame_guard.patch  jsc_cmake.patch  jsc_disable_api_tests.patch  jsc_disable_icu.patch  jsc_features.patch  jsc_fix_arm64_jit_crash.patch  jsc_fix_build_error_disable_dfg.patch  jsc_fix_build_error_execinfo.patch  jsc_fix_build_error_getline.patch  jsc_fix_build_error_log2.patch  jsc_fix_build_error_memalign.patch  jsc_fix_build_error_miss_headers.patch  jsc_fix_build_error_mulodi4.patch  jsc_fix_build_error_statvfs.patch  jsc_fix_build_error_stringview.patch  jsc_fix_concurrent_gc_issue.patch  jsc_fix_external_string_tests.patch  jsc_heap_gc_like_ios.patch  (+12 more)
(+181 files in other folders)
